fixed resume link on firefox

--- a/src/header.css
+++ b/src/header.css
@@ -53,7 +53,19 @@ header div a:nth-of-type(2):-webkit-any-link {
   text-decoration: none;
 }
 
+header div a:nth-of-type(2):any-link {
+  font-size: 1.55rem;
+  font-weight: 500;
+  color: rgb(165, 160, 91);
+  text-decoration: none;
+}
+
 header div a:nth-of-type(2):-webkit-any-link:hover {
+  color: var(--third-color);
+  transition: 0.15s;
+}
+
+header div a:nth-of-type(2):any-link:hover {
   color: var(--third-color);
   transition: 0.15s;
 }
